Support running tests on Java 17